# macroni-n-cheese

./: Cargo.toml  LICENSE  README.md
src/: _main.rs  autoconstruct.rs  builder.rs  builder_lite.rs  ctrlc.rs  doc_display.rs  extends.rs  eyre.rs  lib.rs  mathinator2000.rs  minmax.rs  swizzle.rs
tests/: enum_tests.rs  struct_tests.rs
