[package]
name = "macroni-n-cheese"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
regex = "1.12.2"
syn = { version = "2.0.111", features = ["full", "extra-traits"] }

[dev-dependencies]
criterion = "0.8.0"
proptest = "1.9.0"
trybuild = { version = "1.0.114", features = ["diff"] }

[features]
default = ["doc_display", "builder_lite"]
doc_display = []
builder_lite = []
