[package]
name = "macroni-n-cheese"
version = "0.1.4"
edition = "2024"
readme = "README.md"
license-file = "./LICENSE"
description = "some cool macros i made"
keywords = ["macros", "derive", "coolstuff"]
categories = ["rust-patterns"]
repository = "https://github.com/thebearodactyl/macroni-n-cheese"
homepage = "https://github.com/thebearodactyl/macroni-n-cheese"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
regex = "1.12.2"
syn = { version = "2.0.111", features = ["full", "extra-traits", "visit-mut"] }
ctrlc = { version = "3.5.1", optional = true }
color-eyre = { version = "0.6.5", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }

[features]
default = [
    "doc_display",
    "builder_lite",
    "minmax",
    "ctrlc",
    "eyre",
    "extends",
    "builder",
    "main",
    "autoconstruct",
    "mathinator2000",
]
doc_display = []
builder_lite = []
minmax = []
autoconstruct = []
ctrlc = ["dep:ctrlc"]
eyre = ["dep:color-eyre"]
extends = []
builder = []
mathinator2000 = []
main = ["dep:color-eyre", "dep:tokio"]
